--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -155,7 +155,7 @@
             <span class="caption-subject  font-black bold uppercase">Sign In</span></div>
     </div>
     <!--<div class="pull-right"><i class="close green"></i></div>-->
-   <div class="col-md-12" style="text-align: center;color:red">{{message}}</div>
+   <div class="col-md-12" style="text-align: center;color:red;padding:20px">{{message}}</div>
     <div class="modal-body" id="modal-body">
         <div class="form-group">
             <label class=" uppercase">Email / Mobile Number / Member Id</label>
