logout api added

--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -169,7 +169,7 @@
                                             <i class="icon-lock"></i> Settings </a>
                                     </li>
                                     <li>
-                                        <a ui-sref="login">
+                                        <a ng-click="logout()">
                                             <i class="icon-key"></i> Log Out </a>
                                     </li>
                                 </ul>
